s~\bsun\.(misc\.Unsafe)\b~jdk.internal.$1~g; s~\bputOrdered([A-Za-z]+)\b~put${1}Release~g